[package]
name = "ya0201ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
ipnet = "2.11.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tabled = "0.19.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
